# ES-Runtime

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  install.ps1  install.sh  patch.diff  release.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  buf.gen.yaml  gen-bench-data.sh  memory-safety.sh  package.json  protobuf-ours.mjs  protobuf-parity.mjs  rps.sh  run.sh
bench/proto/: all.proto  catalog.proto
bench/scripts/: async.js  base64.js  compression.js  compute.js  crypto.js  encoding.js  fetch.js  fetch_upload.js  fs.js  fsappend.js  fsappend_large.js  fsexists_large.js  fsexists_small.js  fsread_large.js  fsread_small.js  fsstat_large.js  fsstat_small.js  fswrite.js  fswrite_large.js  glob.js  helloserver.js  hono.js  http.js  json.js  jsonbig.js  jsonl_stream.js  mem_large_string.js  mem_nested_json.js  mem_promise_leak.js  msgpack_large.js  msgpack_small.js  protobuf_large.js  protobuf_small.js  sha256.js  startup.js  streams.js  structured.js  timers.js  toml_large.js  toml_small.js  (+15 more)
bench/websocket-chat/: README.md  client.js  run-chat.sh  server-bun.js  server-deno.js  server-esrun.js
crates/common/: Cargo.toml
crates/common/src/: capability.rs  config.rs  error.rs  lib.rs  telemetry.rs
crates/default-providers/: Cargo.toml
crates/default-providers/examples/: bench.rs
crates/default-providers/src/: clock.rs  console.rs  driver.rs  entropy.rs  lib.rs  modules.rs  net.rs  node_modules.rs  path.rs  process.rs  system_fs.rs  system_http.rs  system_net.rs  system_sync_fs.rs  system_websocket.rs  task.rs  testing.rs  timers.rs
crates/engine/: Cargo.toml
crates/engine/src/: convert.rs  engine.rs  error.rs  lib.rs  module.rs  op.rs  snapshot.rs  value.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime-cli/: Cargo.toml  build.rs
crates/runtime-cli/src/: dotenv.rs  main.rs
crates/runtime-cli/tests/: env.rs  modules.rs  wasi.rs  wasm.rs
crates/runtime-cli/tests/fixtures/: dynamic.mjs  fetch-stream-upload.mjs  greet.mjs  http-stream-echo.mjs  http-stream-response.mjs  main.mjs  throws.mjs  uses-cjs-package.mjs  uses-package.mjs
crates/runtime-cli/tests/fixtures/esm/: consumer-pkg.mjs  consumer.mjs  default-alias.mjs  exporter.mjs  reexporter.mjs  side-effect.mjs
crates/runtime-cli/tests/fixtures/sub/: nested.mjs
crates/runtime/conformance/: RESULTS.md  abort.js  base64.js  crypto.js  encoding.js  events.js  exceptions.js  jsonl_test.js  parsers.js  parsers_edge.js  performance.js  protobuf.js  protobuf_failure_list.txt  serialization.js  serialization_edge.js  streams.js  structured-clone.js  url.js  wasm.js
crates/runtime/js/: build.mjs  conformance-testee.mjs  package.json  tsconfig.json
crates/runtime/js/serialization/: index.ts
crates/runtime/js/serialization/protobuf/: decode.ts  descriptor.ts  descriptor_set.ts  encode.ts  features.ts  json.ts  lexer.ts  link.ts  parser.ts  reader.ts  schema.ts  stream.ts  utf8.ts  wkt.ts  writer.ts
crates/runtime/js/test/: protobuf-descriptor-set.test.ts  protobuf-json.test.ts  protobuf.test.ts  wire.test.ts
crates/runtime/js/test/fixtures/: order.fdset
crates/runtime/src/: base64_ops.rs  builtins.rs  compression_ops.rs  crypto_ops.rs  ec_ops.rs  encoding_ops.rs  fetch_ops.rs  fs_ops.rs  http_ops.rs  lib.rs  net_ops.rs  parsers_ops.rs  prelude.rs  process_ops.rs  rsa_ops.rs  runtime_modules.rs  serialization_ops.rs  sync_fs_ops.rs  timer.rs  url_ops.rs  ws_ops.rs
crates/runtime/src/prelude/: abort.js  base64.js  blob.js  compression-streams.js  console.js  crypto.js  dom-exception.js  encoding-streams.js  encoding.js  events.js  fetch.js  globals.js  harden.js  performance.js  streams.js  structured-clone.js  url.js  urlpattern.js  wasm.js  websocket.js
crates/runtime/src/runtime_modules/: fs.js  http.js  net.js  parsers.js  path.js  process.js  serialization.js  wasi.js  websocket.js
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  LICENSING.md  SECURITY-REVIEW.md  SPEC.md
examples/: crypto.js  hello.js  index.js  sort.js  timers.js
examples/modules/: dynamic.mjs  fs.mjs  greet.mjs  http.mjs  main.mjs  net.mjs  path.mjs  process.mjs
scripts/: release.sh
site/: .gitignore  global.css  index.html  main.js  otfw.config.js  package.json  style.css  vite-discoverability.mjs  vite.config.js  wrangler.jsonc
site/app/: 404.jsx  global.css  layout.jsx  page.jsx
site/app/api/: layout.jsx  page.jsx  page.mdx
site/app/api/cli/: page.jsx  page.mdx
site/app/api/fs/: page.jsx  page.mdx
site/app/api/http/: page.jsx  page.mdx
site/app/api/net/: page.jsx  page.mdx
site/app/api/parsers/: page.jsx
site/app/api/path/: page.jsx  page.mdx
site/app/api/process/: page.jsx  page.mdx
site/app/api/serialization/: page.jsx  page.mdx
site/app/api/websocket/: page.jsx  page.mdx
site/app/api/websocket-server/: page.jsx
site/app/docs/: layout.jsx  page.jsx  page.mdx
site/app/docs/benchmarks/: page.jsx  page.mdx
site/app/docs/comparison/: page.jsx  page.mdx
site/app/docs/embed/: page.mdx
site/app/docs/errors/: page.jsx  page.mdx
site/app/docs/glob/: page.jsx  page.mdx
site/app/docs/globals/: page.jsx  page.mdx
site/app/docs/http/: page.jsx  page.mdx
site/components/: ApiShell.jsx  BenchCard.jsx  BenchChart.jsx  BenchRoller.jsx  BenchStandings.jsx  BuiltWithBadge.jsx  CodeBlock.jsx  CodeTabs.jsx  DocsShell.jsx  ErrorTable.jsx  Footer.jsx  InstallBox.jsx  MemberTable.jsx  Nav.jsx  RpsChart.jsx  RuntimeVersions.jsx  SiteFooter.jsx  StatusIcon.jsx  WhyChooseSection.jsx  WsSweepTable.jsx
site/public/: llms-full.txt  llms.txt  robots.txt  sitemap.xml
site/scripts/: discoverability.mjs
site/src/: benchmarks.js  benchmarks.json  metric-direction.js  runtime-version.js  site-meta.js
types/: README.md  index.d.ts  package.json  runtime-fs.d.ts  runtime-http.d.ts  runtime-net.d.ts  runtime-parsers.d.ts  runtime-path.d.ts  runtime-process.d.ts  runtime-serialization.d.ts  runtime-wasi.d.ts
(+44 files in other folders)
