# Virtual workspace root for ES-Runtime (Layer A).
#
# Crate layout and dependency direction are fixed by ARCHITECTURE.md §2 / DECISIONS.md D11:
#
#   common → engine → providers → runtime → default-providers → runtime-cli
#
# Each crate may depend only on crates to its left. The `v8` crate appears *only*
# in `engine`; real I/O appears *only* in `default-providers`. Phase 1 introduces
# `common` and `engine`; the remaining crates are added in their own phases
# (SPEC.md §6) to keep merged code free of stubs.
[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/engine",
    "crates/providers",
    "crates/runtime",
    "crates/default-providers",
]

# Shared package metadata. Individual crates inherit via `field.workspace = true`.
[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/opentechf/ES-Runtime"
authors = ["Open Tech Foundation <https://opentechf.org> and its contributors"]

# Single source of truth for dependency versions. Pinned per DECISIONS.md D7
# (supply chain) / ARCHITECTURE.md §7; bumped deliberately, not floated.
[workspace.dependencies]
# Error model (DECISIONS.md D12).
thiserror = "2.0.18"
# Observability (ARCHITECTURE.md §8): structured spans, no println!.
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
# V8 bindings (DECISIONS.md D2). Confined to the `engine` crate.
v8 = "150.0.0"
# Async runtime + OS CSPRNG, used only by `default-providers` (DECISIONS.md D5).
tokio = "1.52.3"
getrandom = "0.4.2"
# WHATWG URL parsing, used by `runtime` for the URL family (DECISIONS.md D17).
url = "2.5.8"
# Async byte-stream trait for provider bodies (trait-only, tiny).
futures-core = "0.3.32"
# Vetted HTTP client for the default NetTransport (DECISIONS.md D20). rustls TLS
# only (no OpenSSL/native-tls). Confined to `default-providers`.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream", "http2", "charset"] }
futures-util = { version = "0.3.32", default-features = false }
# WebCrypto backend: the RustCrypto suite (DECISIONS.md D9). Used by `runtime`.
# Two version generations coexist intentionally: `aes-gcm` 0.10 (+ `aes` 0.8,
# `cbc`, `ctr`) sit on `cipher` 0.4, while the hashing/KDF crates (`sha2`,
# `hmac`, `hkdf`, `pbkdf2`) sit on `digest` 0.11 — `aes-gcm` 0.11 is still an
# rc, so we don't float onto it. `cbc`/`ctr` are pinned to the 0.1/0.9 line so
# they reuse the same `aes` 0.8 / `cipher` 0.4 that `aes-gcm` already pulls (no
# duplicate `aes`); `hkdf`/`pbkdf2` 0.13 reuse `hmac` 0.13 + `sha2`.
sha1 = "0.11.0"
sha2 = "0.11.0"
hmac = "0.13.0"
aes-gcm = "0.10.3"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
ctr = "0.9.2"
hkdf = "0.13.0"
pbkdf2 = { version = "0.13.0", default-features = false, features = ["hmac"] }
# Elliptic curves for ECDSA/ECDH (SPEC §2.10). These sit on the older
# `elliptic-curve` 0.13 / `digest` 0.10 generation — the unifying
# `elliptic-curve` 0.14 is still pre-release — so they bring duplicate
# `digest` 0.10, `sha2` 0.10, and `hkdf` 0.12 into the tree (the `ecdsa`
# feature transitively enables the curves' bundled `sha2`-hash; `hkdf` 0.12 is
# a direct dep of `elliptic-curve` 0.13). These are warn-level duplicates that
# `deny.toml` permits (DECISIONS.md D9). We still compute the ECDSA prehash
# ourselves with our `sha2` 0.11 so arbitrary `algorithm.hash` works (the
# curves' built-in `DigestSigner` only covers one hash each), and we assemble
# JWK in JS, so the `jwk` feature stays off.
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "ecdh", "pkcs8", "std"] }
p384 = { version = "0.13.1", default-features = false, features = ["ecdsa", "ecdh", "pkcs8", "std"] }
p521 = { version = "0.13.3", default-features = false, features = ["ecdsa", "ecdh", "pkcs8", "std"] }

# Internal crates, referenced by path so the dependency graph is the boundary
# (DECISIONS.md D11).
es-runtime-common = { path = "crates/common", version = "0.0.0" }
es-runtime-engine = { path = "crates/engine", version = "0.0.0" }
es-runtime-providers = { path = "crates/providers", version = "0.0.0" }
es-runtime-runtime = { path = "crates/runtime", version = "0.0.0" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"      # DECISIONS.md D1
missing_docs = "warn"

[workspace.lints.clippy]
# CI runs `clippy -D warnings`; these raise specific hazards to the default
# (warn) level so they surface there. Pedantic groups are intentionally not
# enabled wholesale — they add noise without commensurate signal at this stage.
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"                   # ARCHITECTURE.md §8: no println!
print_stderr = "warn"
