[package]
name = "es-runtime-common"
description = "Cross-cutting primitives for ES-Runtime: error model, capability tokens, tracing, limits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
