[package]
name = "es-runtime-default-providers"
description = "Reference tokio-backed implementations of the ES-Runtime provider traits, plus deterministic test providers and a standalone driver."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
es-runtime-common.workspace = true
es-runtime-providers.workspace = true
es-runtime.workspace = true
dunce.workspace = true
futures-core.workspace = true
futures-util.workspace = true
getrandom.workspace = true
globset.workspace = true
walkdir.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "time", "fs", "net", "io-util", "sync"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
# Test-only: the async test harness and a current-thread runtime.
tokio = { workspace = true, features = ["rt", "time", "macros", "sync"] }

[lints]
workspace = true
