[package]
name = "es-runtime"
description = "The driven runtime: op wiring, the tick/poll event loop, and timer scheduling, built on the engine abstraction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
es-runtime-common.workspace = true
es-runtime-engine.workspace = true
es-runtime-providers.workspace = true
futures-util = { workspace = true, features = ["alloc", "sink"] }
futures-channel = { workspace = true, features = ["std", "sink"] }
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
# WebCrypto (DECISIONS.md D9): RustCrypto, vetted constant-time primitives.
sha1.workspace = true
sha2.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
aes.workspace = true
cbc.workspace = true
ctr.workspace = true
hkdf.workspace = true
pbkdf2.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
rsa.workspace = true
sha1_rsa.workspace = true
base64 = "0.22"
quick-xml = { version = "0.40.1", features = ["serialize"] }
serde_json.workspace = true
serde_yaml = "0.9.34"
toml = "0.8"
rmp-serde = "1.3.0"
serde = "1.0.228"
serde-transcode = "1.1.1"

[lints]
workspace = true
